<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Sunshine</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_location">View Location</string>
    <string name="action_share">Share</string>


    <string name="title_activity_detail">Weather Details</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>

    <string name="pref_location_title">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">Hamilton, ON</string>
    <string name="pref_units_title">Units</string>
    <string name="pref_units_key" translatable="false">units</string>
    <string name="pref_units_default" translatable="false">metric</string>
    <string-array name="pref_units_list_titles">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>
    <string-array name="pref_units_list_values" translatable="false">
        <item>metric</item>
        <item>imperial</item>
    </string-array>
    <string name="pref_notifications_title">Show Notifications</string>
    <string name="pref_notifications_true">Enabled</string>
    <string name="pref_notifications_false">Disabled</string>
    <string name="pref_notifications_key" translatable="false">notifications</string>


    <!-- Sync related strings -->
    <string name="sync_account_type" translatable="false">sunshine.alteridem.net</string>
    <string name="content_authority" translatable="false">net.alteridem.sunshine</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day_of_week">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

    <!-- Strings for formatting weather-related data -->
    <!-- Temperature formatting -->
    <string name="format_temperature"><xliff:g id="temperature">%1$.0f</xliff:g><xliff:g id="degrees">\u00B0</xliff:g></string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- Notifications -->
    <string name="pref_last_notification" translatable="false">last_notification</string>
    <string name="format_notification"><xliff:g id="forecast">%1$s</xliff:g> <xliff:g id="high">%2$s</xliff:g> / <xliff:g id="low">%3$s</xliff:g></string>
</resources>
